k8s/base/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: pingcrm
spec:
  clusterIP: None
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
