k8s/base/reverb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverb
  namespace: pingcrm
spec:
  selector:
    app: reverb
  ports:
    - port: 8080
      targetPort: 8080
