k8s/base/typesense-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typesense
  namespace: pingcrm
spec:
  clusterIP: None
  selector:
    app: typesense
  ports:
    - port: 8108
      targetPort: 8108
