k8s/base/valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: pingcrm
spec:
  clusterIP: None
  selector:
    app: valkey
  ports:
    - port: 6379
      targetPort: 6379
